alignments have been fixed

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
   color: var(--primary-b-400, #6070ff);
   text-align: center;
   font-family: Poppins, sans-serif;
-  font-size: 18px;
+  font-size: 17px;
   font-style: normal;
   font-weight: 700;
   line-height: 20px;
@@ -66,6 +66,7 @@
   font-weight: 400;
   line-height: 20px;
   padding-bottom: 15px;
+  padding-top: 10px;
 }
 
 .social-media {
@@ -75,11 +76,13 @@
   font-style: normal;
   font-weight: 540;
   line-height: 24px;
+  padding-top: 10px;
 }
 
 .scicons {
   width: 170.167px;
   height: 20px;
+  padding-top: 20px;
 }
 
 .works {
@@ -263,13 +266,6 @@
   gap: 12px;
 }
 
-.frame8 {
-  width: 327px;
-  height: 72px;
-  display: flex;
-  justify-content: space-around;
-}
-
 .framework {
   width: 237px;
   color: #000;
@@ -295,25 +291,29 @@
 }
 
 .contact {
-  background-color: #6070ff;
+  flex-shrink: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 114px 24px;
   border-radius: 80px 0;
   gap: 16px;
+  margin-top: 100px;
+  background-image: url(Assets/contact\ form\ shapes-mobile@2x.png);
+  background-color: #6070ff;
+  background-size: contain;
+  background-position-x: 110px;
+  background-repeat: no-repeat;
 }
 
 .contact-me {
   color: var(--neutrals-n-0, #fff);
   text-align: center;
-
-  /* Header / 2 */
-  font-family: Poppins;
+  font-family: Poppins, sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
-  line-height: 52px; /* 130% */
+  line-height: 52px;
 }
 
 .contact_desc {
@@ -323,7 +323,7 @@
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
-  line-height: 28px; /* 140% */
+  line-height: 28px;
   margin-bottom: 36px;
 }
 
@@ -338,6 +338,7 @@ input {
   font-weight: 400;
   padding: 15px 16px 15px 38px;
 }
+
 textarea {
   width: 327px;
   height: 170px;
@@ -348,22 +349,21 @@ textarea {
   padding: 15px 16px 15px 38px;
   font-style: normal;
   text-align: start;
-  line-height: 24px; /* 160% */
+  line-height: 24px;
 }
 
 .get-in-touch {
-padding: 12px 16px;
-align-items: center;
-border-radius: 8px;
-background: var(--neutrals-n-0, #FFF);
-color: var(--primary-b-400, #6070FF);
-text-align: center;
-align-self: flex-start;
-/* Button /Normal */
-font-family: Poppins;
-font-size: 17px;
-font-style: normal;
-font-weight: 500;
-line-height: 24px; /* 141.176% */
-letter-spacing: 0.51px;
+  padding: 12px 16px;
+  align-items: center;
+  border-radius: 8px;
+  background: var(--neutrals-n-0, #FFF);
+  color: var(--primary-b-400, #6070FF);
+  text-align: center;
+  align-self: flex-start;
+  font-family: Poppins, sans-serif;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.51px;
 }
